--- a/esh/.project
+++ b/esh/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test</name>
+	<name>esh</name>
 	<comment></comment>
 	<projects>
 	</projects>
