--- a/esh/WebContent/WEB-INF/web.xml
+++ b/esh/WebContent/WEB-INF/web.xml
@@ -4,7 +4,6 @@
   <welcome-file-list>
     <welcome-file>/default_cn.html</welcome-file>
   </welcome-file-list>
-  <!-- 首页 -->
   <context-param>
     <param-name>index_url</param-name>
     <param-value>/home.html</param-value>
@@ -28,11 +27,9 @@
 			classpath:applicationContext.xml
 		</param-value>
   </context-param>
-  <!-- 上下文监听器 -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-  <!-- 编码容器 org.springframework.web.filter.CharacterEncodingFilter   com.esh.filter.SetCharacterEncodingFilter-->
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>com.esh.filter.SetCharacterEncodingFilter</filter-class>
@@ -45,7 +42,6 @@
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <!-- 隐藏http请求方法 -->
   <filter>
     <filter-name>hiddenHttpMethodFilter</filter-name>
     <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
@@ -54,20 +50,18 @@
     <filter-name>hiddenHttpMethodFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <!-- 在线用户监听 -->
   <listener>
-  	<listener-class>com.esh.listener.OnLineListener</listener-class>
+    <listener-class>com.esh.listener.OnLineListener</listener-class>
   </listener>
   <session-config>
     <session-timeout>10</session-timeout>
   </session-config>
-  <!-- 用户请求和用户状态过滤器 -->
   <filter>
     <filter-name>userFilter</filter-name>
     <filter-class>com.esh.filter.UserFilter</filter-class>
     <init-param>
       <param-name>pass</param-name>
-      <param-value>/home.html;/logOff;/userMenu;/nav;/getAcupList;/getAcupInfo;/getAcupOpInfo;/getHistOpData;/updateUserInfo</param-value>
+      <param-value>/home.html;/logOff;/userMenu;/nav;/getAcupList;/getAcupInfo;/getAcupOpInfo;/getHistOpData;/userInfo;/question</param-value>
     </init-param>
     <init-param>
       <param-name>error_url</param-name>
@@ -79,15 +73,13 @@
     </init-param>
     <init-param>
       <param-name>init_config</param-name>
-      <param-value>/Config.html;/default_cn.html;/signin.html;/signupSec.html;/signIn;/signUp;/chat.html;/chatPanel.html;/selectEquit.html;/describle.html;/editor.html;/info.html;/op.html;/questionnaire.html;/selectMode.html;/treat.html;/userMenu.html;.*.txt;.*.js;.*.css;.*.png;.*.woff;.*.ttf;.*.svg;.*.gif;.*.js.map;.*.jpg</param-value>
+      <param-value>/;/Config.html;/default_cn.html;/cover.html;/signin.html;/signupSec.html;/signIn;/signUp;/chat.html;/chatPanel.html;/selectEquit.html;/describle.html;/editor.html;/questionnaire.html;/selectMode.html;/treat.html;/userMenu.html;.*.txt;.*.js;.*.css;.*.png;.*.woff;.*.ttf;.*.svg;.*.gif;.*.js.map;.*.jpg</param-value>
     </init-param>
   </filter>
   <filter-mapping>
     <filter-name>userFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
-  <!-- 登录 -->
   <servlet>
     <servlet-name>loginAction</servlet-name>
     <servlet-class>com.esh.proxy.DelegatingServletProxy</servlet-class>
@@ -166,6 +158,14 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>userInfoAction</servlet-name>
-    <url-pattern>/updateUserInfo</url-pattern>
+    <url-pattern>/userInfo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>questionAction</servlet-name>
+    <servlet-class>com.esh.proxy.DelegatingServletProxy</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>questionAction</servlet-name>
+    <url-pattern>/question</url-pattern>
   </servlet-mapping>
 </web-app>
